--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".Login" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".NicknameActivity" />
+        <activity android:name=".AgeActivity" />
+        <activity android:name=".GenderActivity"></activity>
     </application>
 
 </manifest>
